[project]
name = "mumimo"
dynamic = ["version"]
description = "A plugin-based all-in-one mumble bot solution with extensive features and support for custom plugins. Successor of the 'JJMumbleBot' project."
authors = [
    {name = "Jason Jerome"}
]
requires-python = ">=3.8"
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["plugin", "mumble", "jjmumblebot", "bot", "murmur"]
classifiers = [
    # Development stage
    "Development Status :: 2 - Pre-Alpha",
    # License
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    # Supported python versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/DuckBoss/Mumimo"
Documentation = "https://github.com/DuckBoss/Mumimo"
Repository = "https://github.com/DuckBoss/Mumimo.git"
Issues = "https://github.com/DuckBoss/Mumimo/issues"
Changelog = "https://github.com/DuckBoss/Mumimo/blob/master/CHANGELOG.md"

[project.scripts]
mumimo = "mumimo:run"

[tool.ruff]
line-length = 150
exclude = ["**/__pycache__", "venv/", "build-tools/", "config/", "logs/", ".*"]
cache-dir = "~/.cache/ruff"

[tool.ruff.lint]
extend-ignore = ["E203"]
extend-select = ["E501"]

[tool.pytest.ini_options]
addopts = "-s -vv --cov=."
pythonpath = "."
testpaths = "tests src/plugins/"
required_plugins = ['pytest-randomly', 'pytest-timeout']
log_format = "(%(asctime)s)[%(name)s][%(levelname)s]:%(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode="auto"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.sh", ".coveragerc"]
pythonVersion = "3.10"
pythonPlatform = "Linux"
